--- a/src/App.css
+++ b/src/App.css
@@ -19,22 +19,63 @@ body {
   flex-direction: column;
   border-right: 1px solid #ddd;
 }
-header{
+header {
   height: 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 15px;
 }
-.header-avatar{
+.header-avatar {
   width: 40px;
   height: 40px;
   border-radius: 20px;
   cursor: pointer;
 }
-.header-buttons{
+.header-buttons {
   display: flex;
 }
+.header-btn {
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.search {
+  background-color: #f6f6f6;
+  border-bottom: 1px solid #eee;
+  padding: 5px 15px;
+}
+.search-input {
+  background-color: #fff;
+  height: 40px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  padding: 0 10px;
+}
+.search-input input {
+  flex: 1;
+  border: 0;
+  outline: 0;
+  background-color: transparent;
+  margin-left: 10px;
+}
+.chatlist {
+  flex: 1;
+  background-color: #fff;
+  overflow-y: auto;
+}
+.chatlist::-webkit-scrollbar{
+  width: 6px;
+  height: 6px;
+}
+.chatlist::-webkit-scrollbar-thumb{
+  background-color: rgba(0, 0, 0, .2);
+}
 .content-area {
-
+  flex: 1;
 }
